Add running instructions to README.